--- a/home/templates/cube.html
+++ b/home/templates/cube.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cube</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Cube{% endblock %}
+{% block body %}
     <h1>{{ num }}의 세제곱은 {{ cubenum }}</h1>
-</body>
-</html>
+{% endblock %}
