--- a/home/templates/hello.html
+++ b/home/templates/hello.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Hello{% endblock %}
+{% block body %}
     <h1>{{ name }}, 안녕??</h1>
-</body>
-</html>
+{% endblock %}
