--- a/home/templates/user_create.html
+++ b/home/templates/user_create.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>User_create</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}User_create{% endblock %}
+{% block body %}
     <h1>{{ nickname }} {{ pwd }}</h1>
-</body>
-</html>
+{% endblock %}
