--- a/home/templates/user_new.html
+++ b/home/templates/user_new.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>User_new</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}User_new{% endblock %}
+{% block body %}
     <form action='/home/user_create/', method='POST'>
         {% csrf_token %}
         <input type="text" name="nickname"/>
         <input type="password" name="pwd"/>
         <input type="submit" value="Submit"/>
     </form>
-</body>
-</html>
+{% endblock %}
