09_Separate URL for multiple apps

--- a/home/templates/static_example.html
+++ b/home/templates/static_example.html
@@ -5,9 +5,9 @@
 {% block title %}STATIC{% endblock %}
 
 {% block css %}
-    <link rel="stylesheet" href="{% static 'style.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'stylesheets/style.css' %}" type="text/css" />
 {% endblock %}
     
 {% block body %}
-    <img src="{% static 'dog.png' %}" alt='image'></img>
+    <img src="{% static 'images/dog.png' %}" alt='image'></img>
 {% endblock %}
